# zk-audio

./: .gitignore  Cargo.toml  compile.circuit.sh  generate.keys.sh
circuits/: dist_step.circom  hasher.circom  multiplier.circom  multiplier_batch_100.circom  multiplier_batch_1000.circom  multiplier_step.circom  square_step.circom
src/: audio_editor.rs  audio_parser.rs  circuit.rs  lib.rs  main.rs  signer.rs
tests/: audio_samples.rs  signature.rs
