[package]
name = "zk-audio"
version = "0.1.0"
edition = "2024"

[dependencies]
nova-scotia = "0.5.0"
nova-snark = "0.23.0"
anyhow = "1.0.65"
bellperson = { version = "0.25", default-features = false }
byteorder = "1.4.3"
ff = { version = "0.13", features = ["derive"]}
hex-literal = "0.3.4"
itertools = "0.9.0"
num-bigint = { version = "0.4", features = ["serde", "rand"] }
num-traits = "0.2.15"
pasta_curves = "0.5"
serde = "1.0"
serde_json = "1.0.85"
hound = "3.5.1"
k256 = { version = "0.13.4", features = ["ecdsa", "pem", "pkcs8"]}
p256 = { version = "0.13.2", features = ["ecdsa", "pem", "pkcs8"]}
pkcs8 = "0.10.2"
sha2 = "0.11.0"

